Add the title section and nav

--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>Netflix - Watch TV Shows Online, Watch Movies Online</title>
 </head>
 <body>
-    
+    <nav>
+        <img src="" alt="" class="main-logo">
+        <div class="right-nav">
+            <select name="language" id="language-sel">
+                <option value="indonesia">Bahasa Indonesia</option>
+                <option value="english" selected>English</option>
+            </select>
+            <button class="btn nav-cta">Sign In</button>
+        </div>
+    </nav>
+    <main>
+        <section id="title">
+            <h1 class="main-title">Unlimited movies, TV shows, and more.</h1>
+            <p class="sub-title">Watch Anywhere. Cancel Anytime.</p>
+            <p class="paragraph">Ready to watch? Enter your email to create or restart your membership.</p>
+            <div class="action">
+                <input type="email" name="" id="">
+                <button class="btn cta"> Get Started ></button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
