Add the first feature section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </nav>
     <main>
-        <section id="title">
+        <section id="title" class="fullbleed">
             <h1 class="main-title">Unlimited movies, TV<br> shows, and more.</h1>
             <p class="sub-title">Watch anywhere. Cancel anytime.</p>
             <p class="paragraph">Ready to watch? Enter your email to create or restart your membership.</p>
@@ -33,6 +33,20 @@
                 <button class="btn cta"> Get Started ></button>
             </div>
         </section>
+
+        <div class="section-border fullbleed"></div>
+        <section id="feature" class="grid-half">
+            <div class="text-part">
+                <h2 class="heading">Enjoy on your TV.</h2>
+                <p class="paragraph">Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
+            </div>
+            <div class="image-part video">
+                <img src="media/image/tv.png" alt="tv" >
+                <video src="media/video/tv-bg.mp4" autoplay muted loop class="inside-vide"></video>
+            </div>
+        </section>
+        <div class="section-border fullbleed"></div>
+ 
     </main>
 </body>
 </html>
