Add feature offline section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,19 @@
             </div>
         </section>
         <div class="section-border fullbleed"></div>
- 
+        <section id="feature-offline" class="grid-half">
+            <div class="image-part">
+                <img src="media/image/download.png" alt="download">
+            </div>
+            <div class="text-part">
+                <h2 class="heading">Download your shows to watch offline.</h2>
+                <p class="paragraph">
+                    Save your favorites easily and always have something to watch.
+                </p>
+            </div>
+        </section>
+        <div class="section-border fullbleed"></div>
+
     </main>
 </body>
 </html>
