Add the multi device section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             </div>
         </section>
         <div class="section-border fullbleed"></div>
+
         <section id="feature-offline" class="grid-half">
             <div class="image-part">
                 <img src="media/image/download.png" alt="download">
@@ -55,6 +56,18 @@
                 <p class="paragraph">
                     Save your favorites easily and always have something to watch.
                 </p>
+            </div>
+        </section>
+
+        <div class="section-border fullbleed"></div>
+        <section id="multi" class="grid-half" >
+            <div class="text-part">
+                <h2 class="heading">Watch everywhere.</h2>
+                <p class="paragraph">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
+            </div>
+            <div class="image-part video">
+                <img src="media/image/multi.png" alt="all device">
+                <video src="media/video/multi-vid.mp4"autoplay loop muted></video>
             </div>
         </section>
         <div class="section-border fullbleed"></div>
