--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
             </div>
         </section>
         <div class="section-border fullbleed"></div>
+        <section id="kid" class="grid-half">
+            <div class="image-part">
+                <img src="media/image/kids.png" alt="kids profile">
+            </div>
+            <div class="text-part">
+                <h2 class="heading">Create profiles for kids.</h2>
+                <p class="paragraph">Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</p>
+            </div>
+        </section>
+        <div class="section-border fullbleed"></div>
 
     </main>
 </body>
