Add the faq section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix - Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style/main.css">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/bb83019d49.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -78,6 +80,32 @@
             <div class="text-part">
                 <h2 class="heading">Create profiles for kids.</h2>
                 <p class="paragraph">Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</p>
+            </div>
+        </section>
+        <div class="section-border fullbleed"></div>
+        <section id="faq">
+            <div class="text-part">
+                <h2 class="heading">Frequently Asked Questions</h2>
+            </div>
+            <div class="questions">
+                <div class="question opened">
+                    <div class="q">
+                        <p class="paragraph">
+                            What is Netflix?
+                        </p>
+                        <i class="fa-solid fa-xmark q-open"></i>
+                        <i class="fa-solid fa-add q-close"></i>
+                    </div>
+                    <div class="a">
+                        <p class="paragraph">
+                            Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.
+                        </p>
+                        <p class="paragraph">
+                            You can watch as much as you want, whenever you want without a single commercial – all for one low monthly price. There's always something new to discover and new TV shows and movies are added every week!        
+                        </p>
+
+                    </div>
+                </div>
             </div>
         </section>
         <div class="section-border fullbleed"></div>
