--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <p class="paragraph"> 
                             Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
                         </p>
-                        <p class="paragrpah">
+                        <p class="paragraph">
                             You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
                         </p>
                     </div>
