Add the footer section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <!-- Action -->
         <div class="right-nav">
-            <select name="language" id="language-sel">
+            <select name="language" class="language-sel">
                 <option value="indonesia">Bahasa Indonesia</option>
                 <option value="english" selected>English</option>
             </select>
@@ -230,6 +230,45 @@
         </section>
         <div class="section-border fullbleed"></div>
 
+
+        <footer>
+            <p class="paragraph">Question? Call <a href="tel:007-803-321-2130">007-803-321-2130</a></p>
+
+            <div class="footer-grid">
+                <div class="footer-col">
+                    <a href="#">FAQ</a>
+                    <a href="#">Investor Relations</a>
+                    <a href="#">Ways To Watch</a>
+                    <a href="#">Corporate Information</a>
+                    <a href="#">Only on Netflix</a>
+                </div>
+                <div class="footer-col">
+                    <a href="#">Help Center</a>
+                    <a href="#">Jobs</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Contact Us</a>
+                </div>
+                <div class="footer-col">
+                    <a href="#">Account</a>
+                    <a href="#">Redeem Gift Cards</a>
+                    <a href="#">Privacy</a>
+                    <a href="#">Speed Test</a>
+                </div>
+                <div class="footer-col">
+                    <a href="#">Media Center</a>
+                    <a href="#">Buy Gift Cards</a>
+                    <a href="#">Cookie Preferences</a>
+                    <a href="#">Legal Notices</a>
+                </div>
+            </div> 
+
+            <select name="language" class="language-sel">
+                <option value="indonesia">Bahasa Indonesia</option>
+                <option value="english" selected>English</option>
+            </select>
+
+            <p class="sitename paragraph">Netflix Indonesia</p>
+        </footer>
         <script>
             // Class Toggler Script
             function toggleClass(el,name){
