Add responsiveness to the page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
         <div class="section-border fullbleed"></div>
 
-        <section id="feature-offline" class="grid-half">
+        <section id="feature-offline" class="grid-half r">
             <div class="image-part">
                 <img src="media/image/download.png" alt="download">
             </div>
