--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix - Watch TV Shows Online, Watch Movies Online</title>
     <link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico" type="image/x-icon">
-    
     <link rel="stylesheet" href="style/main.css">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/bb83019d49.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
+    <!-- Just a test commit to see if I can still push -->
     <!-- Navigation -->
     <nav>
         <!-- Logo -->
